--- a/08_5_Batch_Normalization.ipynb
+++ b/08_5_Batch_Normalization.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7ywL6dJgedkWNiH7dHbOa",
+      "authorship_tag": "ABX9TyNg5jaMlCIiItfMqgx62htU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "height": 1000
         },
         "id": "MlPDSd2sv9aG",
-        "outputId": "36855177-d62f-4e94-9280-35a8f74c9d91"
+        "outputId": "977795c6-6790-4b63-d224-a8d19d426d73"
       },
       "outputs": [
         {
@@ -58,7 +58,7 @@
             "  Downloading pandas-2.0.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (18 kB)\n",
             "Collecting scipy==1.10.1 (from d2l)\n",
             "  Downloading scipy-1.10.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (58 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.9/58.9 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.9/58.9 kB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: notebook in /usr/local/lib/python3.10/dist-packages (from jupyter==1.0.0->d2l) (6.5.5)\n",
             "Collecting qtconsole (from jupyter==1.0.0->d2l)\n",
             "  Downloading qtconsole-5.6.1-py3-none-any.whl.metadata (5.0 kB)\n",
@@ -144,24 +144,24 @@
             "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m111.7/111.7 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading jupyter-1.0.0-py2.py3-none-any.whl (2.7 kB)\n",
             "Downloading matplotlib-3.7.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.6/11.6 MB\u001b[0m \u001b[31m50.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.6/11.6 MB\u001b[0m \u001b[31m35.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading matplotlib_inline-0.1.6-py3-none-any.whl (9.4 kB)\n",
             "Downloading numpy-1.23.5-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (17.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m17.1/17.1 MB\u001b[0m \u001b[31m38.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m17.1/17.1 MB\u001b[0m \u001b[31m36.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading pandas-2.0.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.3 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.3/12.3 MB\u001b[0m \u001b[31m43.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.3/12.3 MB\u001b[0m \u001b[31m31.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading requests-2.31.0-py3-none-any.whl (62 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.6/62.6 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.6/62.6 kB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading scipy-1.10.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (34.4 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.4/34.4 MB\u001b[0m \u001b[31m10.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.4/34.4 MB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading pyparsing-3.0.9-py3-none-any.whl (98 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m98.3/98.3 kB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m98.3/98.3 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading qtconsole-5.6.1-py3-none-any.whl (125 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m125.0/125.0 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m125.0/125.0 kB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading QtPy-2.4.2-py3-none-any.whl (95 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m95.2/95.2 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m95.2/95.2 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading jedi-0.19.2-py2.py3-none-any.whl (1.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m27.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m41.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: requests, qtpy, pyparsing, numpy, matplotlib-inline, jedi, scipy, pandas, matplotlib, qtconsole, jupyter, d2l\n",
             "  Attempting uninstall: requests\n",
             "    Found existing installation: requests 2.32.3\n",
@@ -223,7 +223,7 @@
                   "numpy"
                 ]
               },
-              "id": "5ee24f51576348bf87cfdcf362576cfa"
+              "id": "c6c4485e232e497eb9aa37d1d2b2afb5"
             }
           },
           "metadata": {}
@@ -243,7 +243,7 @@
       "metadata": {
         "id": "qF2zGabOygnK"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -414,13 +414,248 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "From scratch implementation of Batch Norm:"
+      ],
+      "metadata": {
+        "id": "jSPMAIwFJSaC"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def batch_norm(X, gamma, beta, moving_mean, moving_var, eps, momentum):\n",
+        "  # Use is_grad_enabled to determine whether we are in training mode\n",
+        "  if not torch.is_grad_enabled():\n",
+        "    # In prediction mode, use mean and variance obtained by moving average\n",
+        "    X_hat = (X - moving_mean) / torch.sqrt(moving_var + eps)\n",
+        "  else:\n",
+        "    assert len(X.shape) in (2, 4)\n",
+        "    if len(X.shape) == 2:\n",
+        "      # When using a fully connected layer, calculate the mean and\n",
+        "      # variance on the feature dimension\n",
+        "      mean = X.mean(dim=0)\n",
+        "      var = ((X - mean) ** 2).mean(dim=0)\n",
+        "    else:\n",
+        "      # When using a two-dimensional convolutional layer, calculate the\n",
+        "      # mean and variance on the channel dimension (axis=1). Here we\n",
+        "      # need to maintain the shape of X, so that the broadcasting\n",
+        "      # operation can be carried out later\n",
+        "      mean = X.mean(dim=(0, 2, 3), keepdim=True)\n",
+        "      var = ((X - mean) ** 2).mean(dim=(0, 2, 3), keepdim=True)\n",
+        "    # In training mode, the current mean and variance are used\n",
+        "    X_hat = (X - mean) / torch.sqrt(var + eps)\n",
+        "    # Update the mean and variance using moving average\n",
+        "    moving_mean = (1.0 - momentum) * moving_mean + momentum * mean\n",
+        "    moving_var = (1.0 - momentum) * moving_var + momentum * var\n",
+        "  Y = gamma * X_hat + beta # Scale and shift\n",
+        "  return Y, moving_mean.data, moving_var.data"
+      ],
       "metadata": {
         "id": "6JNRqAGJ8TCY"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Batch Norm Class:"
+      ],
+      "metadata": {
+        "id": "o8bGR2AMJQLS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class BatchNorm(nn.Module):\n",
+        "  # num_features: the number of outputs for a fully connected layer or the\n",
+        "  # number of output channels for a convolutional layer. num_dims: 2 for a# fully connected layer and 4 for a convolutional layer\n",
+        "  def __init__(self, num_features, num_dims):\n",
+        "    super().__init__()\n",
+        "    if num_dims == 2:\n",
+        "      shape = (1, num_features)\n",
+        "    else:\n",
+        "      shape = (1, num_features, 1, 1)\n",
+        "    # The scale parameter and the shift parameter (model parameters) are\n",
+        "    # initialized to 1 and 0, respectively\n",
+        "    self.gamma = nn.Parameter(torch.ones(shape))\n",
+        "    self.beta = nn.Parameter(torch.zeros(shape))\n",
+        "    # The variables that are not model parameters are initialized to 0 and\n",
+        "    # 1\n",
+        "    self.moving_mean = torch.zeros(shape)\n",
+        "    self.moving_var = torch.ones(shape)\n",
+        "\n",
+        "  def forward(self, X):\n",
+        "    # If X is not on the main memory, copy moving_mean and moving_var to\n",
+        "    # the device where X is located\n",
+        "    if self.moving_mean.device != X.device:\n",
+        "      self.moving_mean = self.moving_mean.to(X.device)\n",
+        "      self.moving_var = self.moving_var.to(X.device)\n",
+        "    # Save the updated moving_mean and moving_var\n",
+        "    Y, self.moving_mean, self.moving_var = batch_norm(\n",
+        "        X, self.gamma, self.beta, self.moving_mean,\n",
+        "        self.moving_var, eps=1e-5, momentum=0.1)\n",
+        "    return Y"
+      ],
+      "metadata": {
+        "id": "lhDTvhCdJp7y"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **LeNet with Batch Normalization**\n"
+      ],
+      "metadata": {
+        "id": "iMiAuHBKKNRM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class BNLeNetScratch(d2l.Classifier):\n",
+        "  def __init__(self, lr=0.1, num_classes=10):\n",
+        "    super().__init__()\n",
+        "    self.save_hyperparameters()\n",
+        "    self.net = nn.Sequential(\n",
+        "      nn.LazyConv2d(6, kernel_size=5),\n",
+        "      BatchNorm(6, num_dims=4),\n",
+        "      nn.Sigmoid(),\n",
+        "      nn.AvgPool2d(kernel_size=2, stride=2),\n",
+        "      nn.LazyConv2d(16, kernel_size=5),\n",
+        "      BatchNorm(16, num_dims=4),\n",
+        "      nn.Sigmoid(),\n",
+        "      nn.AvgPool2d(kernel_size=2, stride=2),\n",
+        "      nn.Flatten(),\n",
+        "      nn.LazyLinear(120),\n",
+        "      BatchNorm(120, num_dims=2),\n",
+        "      nn.Sigmoid(),\n",
+        "      nn.LazyLinear(84),\n",
+        "      BatchNorm(84, num_dims=2),\n",
+        "      nn.Sigmoid(),\n",
+        "      nn.LazyLinear(num_classes))"
+      ],
+      "metadata": {
+        "id": "Y6UptM1iKS2G"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Training**"
+      ],
+      "metadata": {
+        "id": "JthfWDo1KvOS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "trainer = d2l.Trainer(max_epochs=10, num_gpus=1)\n",
+        "data = d2l.FashionMNIST(batch_size=128)\n",
+        "model = BNLeNetScratch(lr=0.1)\n",
+        "model.apply_init([next(iter(data.get_dataloader(True)))[0]], d2l.init_cnn)\n",
+        "trainer.fit(model, data)"
+      ],
+      "metadata": {
+        "id": "YBNYjNVqKxak",
+        "outputId": "0b5a1d7d-70a9-4e80-fd2c-0ac56032d7f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz\n",
+            "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz to ../data/FashionMNIST/raw/train-images-idx3-ubyte.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 26.4M/26.4M [00:01<00:00, 16.9MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting ../data/FashionMNIST/raw/train-images-idx3-ubyte.gz to ../data/FashionMNIST/raw\n",
+            "\n",
+            "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz\n",
+            "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw/train-labels-idx1-ubyte.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 29.5k/29.5k [00:00<00:00, 279kB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting ../data/FashionMNIST/raw/train-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw\n",
+            "\n",
+            "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz\n",
+            "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz to ../data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 4.42M/4.42M [00:00<00:00, 5.03MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting ../data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz to ../data/FashionMNIST/raw\n",
+            "\n",
+            "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz\n",
+            "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 5.15k/5.15k [00:00<00:00, 7.20MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting ../data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz to ../data/FashionMNIST/raw\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/torch/utils/data/dataloader.py:617: UserWarning: This DataLoader will create 4 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
     }
   ]
 }
