--- a/10_2_GRU(Theory).ipynb
+++ b/10_2_GRU(Theory).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZJuaghpP1CRBDf7aUo9s+",
+      "authorship_tag": "ABX9TyOfFdAJ94+PYaxN+0evLN+k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,8 +31,11 @@
       "source": [
         "## **Gated Recurrent Unit**\n",
         "\n",
-        "The gated recurrent unit offered a streamlined version of the LSTM memory cell that often\n",
-        "achieves comparable performance but with the advantage of being faster to compute.\n",
+        "Compared with LSTMs, GRUs achieve similar performance but tend to be lighter computationally.\n",
+        "Generally, compared with simple RNNs, gated RNNS, just like LSTMs and\n",
+        "GRUs, can better capture dependencies for sequences with large time step distances. GRUs\n",
+        "contain basic RNNs as their extreme case whenever the reset gate is switched on. They can\n",
+        "also skip subsequences by turning on the update gate.\n",
         "\n"
       ],
       "metadata": {
