--- a/10_4_Bidirectional_RNN.ipynb
+++ b/10_4_Bidirectional_RNN.ipynb
@@ -279,19 +279,68 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## **Implementation from Scratch**"
+      ],
       "metadata": {
         "id": "6nQoRCAwqMy-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class BiRNNScratch(d2l.Module):\n",
+        "  def __init__(self, num_inputs, num_hiddens, sigma=0.01):\n",
+        "    super().__init__()\n",
+        "    self.save_hyperparameters()\n",
+        "    self.f_rnn = d2l.RNNScratch(num_inputs, num_hiddens, sigma)\n",
+        "    self.b_rnn = d2l.RNNScratch(num_inputs, num_hiddens, sigma)\n",
+        "    self.num_hiddens *= 2 # the output dimension will be doubled\n",
+        "\n",
+        "  def forward(self, inputs, Hs=None):\n",
+        "    f_H, b_H = Hs if Hs is not None else (None, None)\n",
+        "    f_outputs, f_H = self.rnn(inputs, f_H)\n",
+        "    b_outputs, b_H = self.b_rnn(reversed(inputs), b_H)\n",
+        "    outputs = [torch.cat((f, b), -1) for f, b in zip(f_outputs, reversed(b_outputs))]\n",
+        "    return outputs, (f_H, b_H)"
+      ],
+      "metadata": {
+        "id": "cV8X51LHqk5V"
       },
-      "execution_count": null,
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Concise Implementation**"
+      ],
+      "metadata": {
+        "id": "i3GvyLtGr8w-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class BiGRU(d2l.RNN):\n",
+        "  def __init__(self, num_inputs, num_hiddens):\n",
+        "    d2l.Module.__init__(self)\n",
+        "    self.save_hyperparameters()\n",
+        "    self.rnn = nn.GRU(num_inputs, num_hiddens, bidirectional=True)\n",
+        "    self.num_hiddens *= 2"
+      ],
+      "metadata": {
+        "id": "Kd8v9RJjsDMW"
+      },
+      "execution_count": 4,
       "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9+p0gG8mpAwHcOq19NYUR",
+      "authorship_tag": "ABX9TyORfQuPgTBoWGr+uzBX0iLt",
       "include_colab_link": true
     },
     "kernelspec": {
