--- a/10_4_Bidirectional_RNN.ipynb
+++ b/10_4_Bidirectional_RNN.ipynb
@@ -281,6 +281,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Bidirectional RNNs are very costly to train due to long gradient chains."
+      ],
+      "metadata": {
+        "id": "xuBe8nAdsTGe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## **Implementation from Scratch**"
       ],
       "metadata": {
@@ -340,7 +349,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORfQuPgTBoWGr+uzBX0iLt",
+      "authorship_tag": "ABX9TyMz3IX2JfLIveRk/JvqXUvx",
       "include_colab_link": true
     },
     "kernelspec": {
